Deep Aggregation module implemented

--- a/DeepSequences.ipynb
+++ b/DeepSequences.ipynb
@@ -14,19 +14,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "writer = SummaryWriter()\n",
+    "# Test whether aggregation moduls have correct dimensionality:\n",
+    "$ f : \\mathcal{P}\\left( \\mathbb{R}^{(B \\times C \\times H \\times W)} \\right) \\rightarrow \\mathbb{R}^{(B \\times C \\times H \\times W)} $ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 64, 256, 256])\n",
+      "Success\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    del agg\n",
+    "except:\n",
+    "    pass\n",
     "\n",
-    "for n_iter in range(100):\n",
-    "    writer.add_scalar('Loss/train', np.random.random(), n_iter)\n",
-    "    writer.add_scalar('Loss/test', np.random.random(), n_iter)\n",
-    "    writer.add_scalar('Accuracy/train', np.random.random(), n_iter)\n",
-    "    writer.add_scalar('Accuracy/test', np.random.random(), n_iter)\n",
-    "writer.flush()"
+    "agg = AttentionAggregation().cuda()\n",
+    "S,B,C,H,W = 3, 2, 64, 256, 256    # Sequence length, Batch, Channels, Height, Width\n",
+    "x = torch.rand(B, S, C, H, W).cuda()\n",
+    "print(agg(x).size())\n",
+    "print(\"Success\")\n",
+    "del agg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 2, 64, 256, 256])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.rand(B, S, C, H, W).permute(1,0,2,3,4).size()"
    ]
   },
   {
@@ -37,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 3, 256, 256])"
+       "torch.Size([5, 131072, 64])"
       ]
      },
      "execution_count": 2,
@@ -46,15 +86,20 @@
     }
    ],
    "source": [
-    "resnet = DeepSetNet()\n",
-    "S,B,C,H,W = 11, 2, 3, 256, 256\n",
-    "x = torch.rand(B, S, C, H, W)\n",
-    "resnet(x).size()"
+    "embed_dim = 64\n",
+    "\n",
+    "encoder_layer = nn.TransformerEncoderLayer(d_model=embed_dim, nhead=4, dim_feedforward=64)\n",
+    "transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=1).cuda()\n",
+    "\n",
+    "src = torch.rand(5, 2*256**2, embed_dim).cuda()\n",
+    "out = transformer_encoder(src)\n",
+    "del transformer_encoder\n",
+    "out.size()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +108,7 @@
        "tensor(True, device='cuda:0')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,73 +149,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         ...,\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000]],\n",
-       "\n",
-       "        [[1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         ...,\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000]],\n",
-       "\n",
-       "        [[1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         ...,\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000]],\n",
-       "\n",
-       "        ...,\n",
-       "\n",
-       "        [[1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         ...,\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000]],\n",
-       "\n",
-       "        [[1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         ...,\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000]],\n",
-       "\n",
-       "        [[1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         ...,\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000],\n",
-       "         [1.0000, 1.0000, 1.0000,  ..., 1.0000, 1.0000, 1.0000]]])"
+       "tensor(-8.7497e-07)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.rand(10,64,256,256)\n",
-    "softm = nn.Softmax2d()\n",
-    "x = softm(x)\n",
-    "x.sum(1)"
+    "x = torch.rand(10,64,256,256)*100\n",
+    "w = torch.ones(10,64,256,256)\n",
+    "softm = nn.Softmax(0)\n",
+    "w = softm(w)\n",
+    "(x.mean(0) - (x*w).sum(0)).mean()"
    ]
   }
  ],
@@ -190,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
