Trained DeepSet with attention

--- a/DeepSequences.ipynb
+++ b/DeepSequences.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from comet_ml import Experiment\n",
     "from pytorch_lightning.loggers import CometLogger\n",
-    "import datasets\n",
+    "from src import datasets\n",
     "import torch\n",
     "from architectures import *\n",
     "from torch.utils.data import Dataset, DataLoader\n",
